--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@ function _destroy() {
 }
 function handleOrientation(event) {
 // 	var absolute = event.absolute;
-//	var alpha    = event.alpha;
+	var alpha    = event.alpha;
 //	var beta     = event.beta;
 //	var gamma    = event.gamma;
 	const misvisning = 4.5;
