--- a/VisVeiNy2.htm
+++ b/VisVeiNy2.htm
@@ -249,7 +249,7 @@ document.getElementById("info").innerHTML += "<p>sPil.rotation=" + Pil.rotation;
 		stedMerke.setZIndex(100);
  		infoWindow = new google.maps.InfoWindow();
 // Bind the functions...
-		window.addEventListener("deviceorientation", handleOrientation, true);
+		window.addEventListener("deviceorientationabsolute", handleOrientation, true);
 		alert('Kalibrer kompasset! Beveg telefonen i 8-tall foran deg.');
 		google.maps.event.addListener(stedMerke,"dragstart", function (e) { stedMerke_init(e);});
 		google.maps.event.addListener(dittMerke,"dragstart", function (e) { dittMerke_init(e);});
@@ -561,4 +561,5 @@ function handleOrientation(event) {
 
 </script>
 </body>
+
 </html>
