--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 <button type="button" id="inn" onclick="pluss(1)" ondblclick="pluss(2)" > + </button>
 <button type="button" id="ut" onclick="minus(1)" ondblclick="minus(2)" > - </button>
 <div id="info"></div>
-<script type="module">import open from './konstanter.js';</script>
+<script type="module">import {open} from './konstanter.js';</script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?v=beta&key=" + open + "&libraries=geometry&callback=initMap"></script>
 <script>
 //		var stedpos = {lat: 59.3610869, lng: 11.8386062 };	//Båstnes
